proxyNSproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythonproxy
  namespace: proxy
  labels:
    app: pythonproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pythonproxy
  template:
    metadata:
      labels:
        app: pythonproxy
    spec:
      containers:
      - name: pythonproxy
        image: pedrochristo/pythonproxy:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        imagePullPolicy: Always
        ports:
        - containerPort: 3000


---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway
  namespace: proxy
spec:
  selector:
    istio: poc-ingressgateway
  servers:
  - port:
      number: 3000
      name: http-service
      protocol: HTTP		
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pythonproxy
  namespace: proxy
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - match:
    - uri:
        prefix: /dados
    route:
    - destination:
        port:
          number: 3000
        host: pythonproxy

---
apiVersion: v1
kind: Service
metadata:
  name: pythonproxy
  namespace: proxy
  labels:
    app: pythonproxy
    service: pythonproxy
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 5000
  selector:
    app: pythonproxy
