pythonssl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pythonssl
  namespace: ssl
  labels:
    app: pythonssl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pythonssl
  template:
    metadata:
      labels:
        app: pythonssl
    spec:
      containers:
      - name: pythonssl
        image: pedrochristo/pythonssl:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
        imagePullPolicy: Always
        ports:
        - containerPort: 3000

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pythonssl
  namespace: ssl
spec:
  hosts:
  - "httpbin.poc-cloud.cf"
  gateways:
  - poc/mygateway
  http:
  - match:
    - uri:
        prefix: /data
    route:
    - destination:
        port:
          number: 3000
        host: pythonssl

---
apiVersion: v1
kind: Service
metadata:
  name: pythonssl
  namespace: ssl
  labels:
    app: pythonssl
    service: pythonssl
spec:
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: pythonssl
